--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <link rel="stylesheet" href="styles/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!-- HEADER -->
         <header>
             <div class="left-section">
                 <img class="menu-logo" src="icons/hamburger-menu.svg" alt="menu-logo">
@@ -25,9 +26,321 @@
             <div class="right-section">
                 <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
                 <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
-                <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+                <div class="notification-container">
+                    <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
+                    <div class="notification-count">3</div>
+                </div>
                 <img class="profile-pics" src="thumbnails/pst5.jpg" alt="pastor-image">
             </div>
         </header>
+
+        <!-- LEFT-SIDE-BAR -->
+        <div class="left-side-bar">
+            <div class="home section">
+                <img src="icons/home.svg" alt="home-icon">
+                <p>Home</p>
+            </div>
+            <div class="explore section">
+                <img src="icons/explore.svg" alt="explor-icon">
+                <p>Explore</p>
+            </div>
+            <div class="subscribtion  section">
+                <img src="icons/subscriptions.svg" alt="subscribtion-icon">
+                <p>Subscriptions</p>
+            </div>
+            <div class="original section">
+                <img src="icons/originals.svg" alt="original-icon">
+                <p>Originals</p>
+            </div>
+            <div class="youtube-music section">
+                <img src="icons/youtube-music.svg" alt="youtube-music-icon">
+                <p>Youtube Music</p>
+            </div>
+            <div class="library section">
+                <img src="icons/library.svg" alt="library-icon">
+                <p>Library</p>
+            </div>
+        </div>
+
+        <!-- VIDEO CARDS SECTION-->
+        <section class="video-grid">
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-pic-and-time">
+                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <div class="video-time">
+                        14:20
+                    </div>
+                </div>
+                <div class="video-info">
+                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <div class="video-text">
+                        <div class="video-title">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </div>
+                        <div class="channel-name">
+                            Marques Brownlee
+                        </div>
+                        <div class="video-stat">
+                            3.4M views · 6 months ago
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </body>
 </html>
