Almost done with video-card

--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-2.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        8:22
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-2.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            Try Not To Laugh Chanllenge #9
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            Markiplier
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            19M views · 4 years ago
                         </div>
                     </div>
                 </div>
@@ -112,22 +112,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-3.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        9:13
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-3.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            Crazy Tik Toks TAken Moments Before DISASTER
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            SSSniperWolf
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            12M views · 1 year ago
                         </div>
                     </div>
                 </div>
@@ -135,22 +135,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-4.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        22:09
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-4.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            The Simplest Math Problem No One Can Solve - Collatz Conjecture
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            Veritasium
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            18M views · 4 months ago
                         </div>
                     </div>
                 </div>
@@ -158,22 +158,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-5.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        11:17
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-5.jpeg" alt="">
                     <div class="video-text">
-                        <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        <div class="video-title">                            
+                            Kadane's Algorithm to Maximum Sum Subarray Problem
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            CS Dojo
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            519K views · 5 years ago
                         </div>
                     </div>
                 </div>
@@ -181,22 +181,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-6.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        19:59
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-6.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            Anything You Can Fit In The Circle I’ll Pay For
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            MrBeast
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            141M views · 1 year ago
                         </div>
                     </div>
                 </div>
@@ -204,22 +204,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-7.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        10:13
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-7.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            Why Planes Don't Fly Over Tibet
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            RealLifeLore
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            6.6M views · 1 year ago
                         </div>
                     </div>
                 </div>
@@ -227,22 +227,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-8.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        7:12
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-8.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            Inside The World's Biggest Passenger Plane
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            Tech Vision
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            3.7M views · 10 months ago
                         </div>
                     </div>
                 </div>
@@ -250,22 +250,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-9.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        13:17
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-9.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            The SECRET to Super Human STRENGTH
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            ThenX
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            20M views · 3 year ago
                         </div>
                     </div>
                 </div>
@@ -273,22 +273,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-10.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        7:53
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-10.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            Business Insider
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            14M views · 1 year ago
                         </div>
                     </div>
                 </div>
@@ -296,22 +296,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-11.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        4:10
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-11.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            Dubai's Crazy Underwater Train and Other Things #Only in Dubai
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            Destination Tips
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            3M views · 1 year ago
                         </div>
                     </div>
                 </div>
@@ -319,22 +319,22 @@
 
             <div class="video-card">
                 <div class="video-pic-and-time">
-                    <img class="video-pic" src="thumbnails/thumbnail-1.webp" alt="">
+                    <img class="video-pic" src="thumbnails/thumbnail-12.webp" alt="">
                     <div class="video-time">
-                        14:20
+                        4:51
                     </div>
                 </div>
                 <div class="video-info">
-                    <img class="channel-pic" src="channel-img/channel-1.jpeg" alt="">
+                    <img class="channel-pic" src="channel-img/channel-12.jpeg" alt="">
                     <div class="video-text">
                         <div class="video-title">
-                            Talking Tech and AI with Google CEO Sundar Pichai!
+                            What would happen if you didn’t drink water? - Mia Nacamulli
                         </div>
                         <div class="channel-name">
-                            Marques Brownlee
+                            TED-Ed
                         </div>
                         <div class="video-stat">
-                            3.4M views · 6 months ago
+                            12M views · 5 years ago
                         </div>
                     </div>
                 </div>
