--- a/index.html
+++ b/index.html
@@ -16,21 +16,31 @@
             </div>
             <div class="middle-section">
                 <input type="text" placeholder="Search">
-                <button class="search-icon">
+                <button class="search-icon tooltip-design">
                     <img  src="icons/search.svg" alt="search-icon">
+                    <div class="tooltip" style="bottom: -40px;">Search</div>
                 </button>
-                <button  class="voice-search-icon">
+                <button  class="voice-search-icon tooltip-design">
                     <img src="icons/voice-search-icon.svg" alt="voice-search-icon">
+                    <div class="tooltip">Search with your voice</div>
                 </button>
             </div>
             <div class="right-section">
-                <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
-                <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
-                <div class="notification-container">
+                <div class="tooltip-design">
+                    <img class="upload-icon" src="icons/upload.svg" alt="upload-icon">
+                    <div class="tooltip">Create</div>
+                </div>
+                <div class="tooltip-design">
+                    <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="youtube-apps-icon">
+                    <div class="tooltip">Youtube apps</div>
+                </div>
+                <div class="notification-container tooltip-design">
                     <img class="notifications-icon" src="icons/notifications.svg" alt="notifications-icon">
                     <div class="notification-count">3</div>
+                    <!-- Styling this tooltip here because they don't fit in where i want them to fit-->
+                    <div class="tooltip" style="bottom: -50px;">Notifications</div>
                 </div>
-                <img class="profile-pics" src="thumbnails/pst5.jpg" alt="pastor-image">
+                <img class="profile-pics" src="thumbnails/abdullah.jpg" alt="pastor-image">
             </div>
         </header>
 
